Update to AE2 19.0.24+